# Developed for Anunzio International by Anzul Aqeel. Contact +971545822608 or +971585515742. Linkedin Profile: linkedin.com/in/anzulaqeel

[package]
name = "rust-cli-template"
version = "0.1.0"
edition = "2021"
authors = ["Anzul Aqeel <contact@anunzio.com>"]
description = "A boilerplate for building CLIs in Rust"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"

# Developed for Anunzio International by Anzul Aqeel. Contact +971545822608 or +971585515742. Linkedin Profile: linkedin.com/in/anzulaqeel
